# gemini-demo

./: README.md  pyproject.toml
src/gemini_demo/: main.py
src/gemini_demo/data/: data.csv
